--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,36 @@
+appnope==0.1.0
+backcall==0.2.0
 beautifulsoup4==4.9.1
 certifi==2020.6.20
 chardet==3.0.4
 cycler==0.10.0
+decorator==4.4.2
 idna==2.10
+ipykernel==5.3.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+jedi==0.17.2
 joblib==0.16.0
+jupyter-client==6.1.7
+jupyter-core==4.6.3
 kiwisolver==1.2.0
 lxml==4.5.2
 matplotlib==3.3.2
-mpl-finance @ https://github.com/matplotlib/mpl_finance/archive/master.zip
 mplfinance==0.12.7a0
 numpy==1.19.2
 pandas==1.1.2
 pandas-datareader==0.9.0
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==7.2.0
+prompt-toolkit==3.0.7
+ptyprocess==0.6.0
+Pygments==2.7.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
+pyzmq==19.0.2
 requests==2.24.0
 scikit-learn==0.23.2
 scipy==1.5.2
@@ -23,4 +38,7 @@ six==1.15.0
 sklearn==0.0
 soupsieve==2.0.1
 threadpoolctl==2.1.0
+tornado==6.0.4
+traitlets==5.0.4
 urllib3==1.25.10
+wcwidth==0.2.5
