--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+aiodns==1.1.1
+aiohttp==3.6.2
+appdirs==1.4.4
 appnope==0.1.0
+async-timeout==3.0.1
+attrs==20.2.0
 backcall==0.2.0
-beautifulsoup4==4.9.1
-certifi==2020.6.20
+backtrader==1.9.75.123
+beautifulsoup4==4.8.2
+black==19.10b0
+bs4==0.0.1
+ccxt==1.30.59
+certifi==2019.11.28
+cffi==1.14.3
+cfgv==3.2.0
 chardet==3.0.4
+click==7.1.2
+cryptography==3.1.1
 cycler==0.10.0
 decorator==4.4.2
-idna==2.10
+distlib==0.3.1
+fastquant==0.1.3.23
+filelock==3.0.12
+identify==1.5.5
+idna==2.8
 ipykernel==5.3.4
 ipython==7.18.1
 ipython-genutils==0.2.0
@@ -14,31 +31,52 @@ joblib==0.16.0
 jupyter-client==6.1.7
 jupyter-core==4.6.3
 kiwisolver==1.2.0
-lxml==4.5.2
+lxml==4.4.2
 matplotlib==3.3.2
 mplfinance==0.12.7a0
+multidict==4.7.6
+multitasking==0.0.9
+networkx==2.4
+nltk==3.5
+nodeenv==1.5.0
 numpy==1.19.2
-pandas==1.1.2
+oauthlib==3.1.0
+pandas==1.0.3
 pandas-datareader==0.9.0
 parso==0.7.1
+pathspec==0.8.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
+pre-commit==2.7.1
 prompt-toolkit==3.0.7
 ptyprocess==0.6.0
+pycares==3.1.1
+pycparser==2.20
 Pygments==2.7.1
 pyparsing==2.4.7
+PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2020.1
+PyYAML==5.3.1
 pyzmq==19.0.2
+regex==2020.9.27
 requests==2.24.0
+requests-oauthlib==1.3.0
 scikit-learn==0.23.2
 scipy==1.5.2
-six==1.15.0
+six==1.13.0
 sklearn==0.0
 soupsieve==2.0.1
 threadpoolctl==2.1.0
+toml==0.10.1
 tornado==6.0.4
+tqdm==4.28.1
 traitlets==5.0.4
-urllib3==1.25.10
+tweepy==3.8.0
+typed-ast==1.4.1
+urllib3==1.25.7
+virtualenv==20.0.31
 wcwidth==0.2.5
+yarl==1.1.0
+yfinance==0.1.54
